--- a/index.html
+++ b/index.html
@@ -1,32 +1,90 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8">
-  <title>QuestsRecord</title>
+  <meta charset="UTF-8" />
+  <title>Quest Record</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #1f1f1f, #2d2d2d);
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .container {
+      width: 100%;
+      max-width: 480px;
+      background-color: #333;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    }
+    h2 {
+      text-align: center;
+      color: #00ffc8;
+    }
+    label {
+      display: block;
+      margin-top: 15px;
+    }
+    select, button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border-radius: 6px;
+      border: none;
+      font-size: 16px;
+    }
+    button {
+      margin-top: 20px;
+      background-color: #00ffc8;
+      color: #000;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #00ccaa;
+    }
+    .info {
+      margin-top: 20px;
+      font-size: 14px;
+    }
+    #result {
+      margin-top: 15px;
+      color: #ff5e5e;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <h2>QuestsRecord</h2>
+  <div class="container">
+    <h2>Quest Record</h2>
+    <form id="playerForm">
+      <label for="playerName">Player:</label>
+      <select id="playerName" required>
+        <option value="">-- SelectPlayer --</option>
+      </select>
 
-  <form id="playerForm">
-    <label for="playerName">PlayerName:</label><br>
-    <select id="playerName" required>
-      <option value="">-- Loading.. --</option>
-    </select><br><br>
+      <label for="job">Role:</label>
+      <select id="job" required>
+        <option value="">-- SelectRole --</option>
+      </select>
 
-    <label for="job">Role:</label><br>
-    <select id="job" required>
-      <option value="">-- Loading.. --</option>
-    </select><br><br>
+      <div class="info">
+        <p><strong>Requirement:</strong> <span id="requirement">-</span></p>
+        <p><strong>Reward:</strong> <span id="reward">-</span></p>
+      </div>
 
-    <p><strong>Requirement:</strong> <span id="requirement">-</span></p>
-    <p><strong>Reward:</strong> <span id="reward">-</span></p>
-
-    <br>
-    <button type="submit">ส่งข้อมูล</button>
-  </form>
-
-  <p id="result"></p>
-
+      <button type="submit">submit</button>
+      <p id="result"></p>
+    </form>
+  </div>
   <script>
     const GET_JOBS_URL = "https://script.google.com/macros/s/AKfycbwH6WKRtUMGMIQ0FZNMd5gMsOaHdEgr7Ae8LKjrEep_cXN4h9stn15H7GJbnj_LsrBQOQ/exec?type=jobs";
     const GET_PLAYERS_URL = "https://script.google.com/macros/s/AKfycbwH6WKRtUMGMIQ0FZNMd5gMsOaHdEgr7Ae8LKjrEep_cXN4h9stn15H7GJbnj_LsrBQOQ/exec?type=players"; // ใส่ URL ที่ให้ข้อมูล player จากชีท Player
@@ -40,7 +98,7 @@
       .then(jobs => {
         jobList = jobs;
         const jobSelect = document.getElementById("job");
-        jobSelect.innerHTML = '<option value="">-- เลือกอาชีพ --</option>';
+        jobSelect.innerHTML = '<option value="">-- SelectRole --</option>';
         jobs.forEach(job => {
           const option = document.createElement("option");
           option.value = job.job;
@@ -49,7 +107,7 @@
         });
       })
       .catch(err => {
-        document.getElementById("job").innerHTML = '<option value="">โหลดไม่สำเร็จ</option>';
+        document.getElementById("job").innerHTML = '<option value="">Error</option>';
         console.error(err);
       });
 
@@ -66,7 +124,7 @@
       .then(res => res.json())
       .then(players => {
         const playerSelect = document.getElementById("playerName");
-        playerSelect.innerHTML = '<option value="">-- เลือกผู้เล่น --</option>';
+        playerSelect.innerHTML = '<option value="">-- SelectPlayer --</option>';
         players.forEach(p => {
           const option = document.createElement("option");
           option.value = p.name;
@@ -75,7 +133,7 @@
         });
       })
       .catch(err => {
-        document.getElementById("playerName").innerHTML = '<option value="">โหลดไม่สำเร็จ</option>';
+        document.getElementById("playerName").innerHTML = '<option value="">Error</option>';
         console.error(err);
       });
 
