--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
       color: #ff5e5e;
       font-weight: bold;
     }
+#requirement,
+#reward {
+    font-size: 18px;
+    font-weight: 600;
+    white-space: pre-line; /* รองรับการขึ้นบรรทัดใหม่จาก \n */
+    line-height: 1.8;
+    color: #fff;
   </style>
 </head>
 <body>
