--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #1f1f1f;
+      background:;
       color: #fff;
       display: flex;
       align-items: center;
