--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Quest Select</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Kanit', sans-serif;
       background:;
       color: #fff;
       display: flex;
