--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Quest Select</title>
   <style>
     body {
-      font-family: 'Kanit', sans-serif;
-      background:;
+      font-family: 'Segoe UI', sans-serif;
+      background: #1f1f1f;
       color: #fff;
       display: flex;
       align-items: center;
@@ -94,7 +94,7 @@
   </div>
 
   <script>
-    const BASE_URL = "https://script.google.com/macros/s/AKfycbx557Fcgz0EJY5nhaIlg2554VV6JzjqfRZoltZ9HVeSN_xsk-d0fU2OnZbXyD489yPMag/exec";
+    const BASE_URL = "https://script.google.com/macros/s/AKfycbximLfGBL1iDDw43IFnTKtKDmz48MQ0GK5ChIxUmLbCBFjjt84m72cjcXGznx2SxlqaEg/exec";
     let questList = [];
 
     // โหลดรายชื่อผู้เล่น
