--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Quest Select</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #1f1f1f;
+      font-family: 'Segoe UI', Kanit-serif;
+      background:
       color: #fff;
       display: flex;
       align-items: center;
