--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <title>Quest Select</title>
   <style>
     body {
-      font-family: 'Segoe UI', Kanit-serif;
-      background:
+      font-family: "Kanit", sans-serif;
+      font-weight: 400;
+      font-style: normal;
       color: #fff;
       display: flex;
       align-items: center;
