--- a/index.html
+++ b/index.html
@@ -1,163 +1,56 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8" />
-  <title>Quest Select</title>
+  <meta charset="UTF-8">
+  <title>ศูนย์ควบคุม</title>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: "Kanit", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
       margin: 0;
+      padding: 0;
+      font-family: 'Kanit', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color:none;
     }
     .container {
-      max-width: 500px;
-      width: 100%;
-      background-color: #333;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
-    }
-    h2 {
       text-align: center;
-      color: #00ffc8;
+      background-color: #444;
+      padding: 40px;
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
     }
-    label {
+    h1 {
+      color: #ee1a1a;
+      margin-bottom: 40px;
+    }
+    .btn {
       display: block;
-      margin-top: 15px;
-    }
-    select, button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border-radius: 6px;
-      border: none;
-      font-size: 16px;
-    }
-    button {
-      background-color: #00ffc8;
-      color: #000;
-      font-weight: bold;
-      margin-top: 20px;
-    }
-    .info {
-      margin-top: 20px;
-    }
-    #requirement, #reward {
+      width: 250px;
+      padding: 15px;
+      margin: 10px auto;
       font-size: 18px;
-      font-weight: 600;
-      white-space: pre-line;
-    }
-    #result {
-      margin-top: 10px;
-      color: #ff5e5e;
       font-weight: bold;
+      color: #000;
+      background-color: #ee1a1a;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      text-decoration: none;
+    }
+    .btn:hover {
+      background-color: #e2e2e2;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>เลือกเควส</h2>
-    <form id="questForm">
-      <label for="playerName">ชื่อผู้เล่น:</label>
-      <select id="playerName" required>
-        <option value="">-- เลือกผู้เล่น --</option>
-      </select>
-
-      <label for="questSheet">หัวข้อเควส:</label>
-      <select id="questSheet" required>
-        <option value="">-- เลือกหัวข้อเควส --</option>
-        <option value="Beginner_Quests">Beginner_Quests</option>
-        <option value="Process_Quests">Process_Quests</option>
-        <option value="Labor_Quests">Labor_Quests</option>
-        <option value="NPC_Quests">NPC_Quests</option>
-        <option value="Story_Quests">Story_Quests</option>
-      </select>
-
-      <label for="questTitle">รายการเควส:</label>
-      <select id="questTitle" required>
-        <option value="">-- กรุณาเลือกหัวข้อก่อน --</option>
-      </select>
-
-      <div class="info">
-        <p><strong>Requirement:</strong> <span id="requirement">-</span></p>
-        <p><strong>Reward:</strong> <span id="reward">-</span></p>
-      </div>
-
-      <button type="submit">บันทึกเควส</button>
-      <p id="result"></p>
-    </form>
+    <h1>SALASA DATABASE</h1>
+    <a class="btn" href="quest.html">📜 รายการเควส</a>
+    <a class="btn" href="players.html">👤 บัญชีนักโทษ</a>
   </div>
-
-  <script>
-    const BASE_URL = "https://script.google.com/macros/s/AKfycbximLfGBL1iDDw43IFnTKtKDmz48MQ0GK5ChIxUmLbCBFjjt84m72cjcXGznx2SxlqaEg/exec";
-    let questList = [];
-
-    // โหลดรายชื่อผู้เล่น
-    fetch(BASE_URL + "?type=players")
-      .then(res => res.json())
-      .then(players => {
-        const select = document.getElementById("playerName");
-        select.innerHTML = '<option value="">-- เลือกผู้เล่น --</option>';
-        players.forEach(p => {
-          const option = document.createElement("option");
-          option.value = p.name;
-          option.textContent = `${p.name} (${p.discord}) - ${p.steamId}`;
-          select.appendChild(option);
-        });
-      });
-
-    // เมื่อเลือกหัวข้อเควส
-    document.getElementById("questSheet").addEventListener("change", function () {
-      const sheet = this.value;
-      if (!sheet) return;
-
-      fetch(BASE_URL + "?type=quests&sheet=" + sheet)
-        .then(res => res.json())
-        .then(quests => {
-          questList = quests;
-          const questSelect = document.getElementById("questTitle");
-          questSelect.innerHTML = '<option value="">-- เลือกเควส --</option>';
-          quests.forEach(q => {
-            const option = document.createElement("option");
-            option.value = q.title;
-            option.textContent = q.title;
-            questSelect.appendChild(option);
-          });
-        });
-    });
-
-    // เมื่อเลือกเควส → แสดง requirement/reward
-    document.getElementById("questTitle").addEventListener("change", function () {
-      const quest = questList.find(q => q.title === this.value);
-      document.getElementById("requirement").textContent = quest?.requirement || "-";
-      document.getElementById("reward").textContent = quest?.reward || "-";
-    });
-
-    // ส่งข้อมูลบันทึก
-    document.getElementById("questForm").addEventListener("submit", function (e) {
-      e.preventDefault();
-      const playerName = document.getElementById("playerName").value;
-      const questTitle = document.getElementById("questTitle").value;
-
-      fetch(BASE_URL, {
-        method: "POST",
-        headers: { "Content-Type": "text/plain" },
-        body: JSON.stringify({ playerName, job: questTitle }) // job = questTitle
-      })
-      .then(res => res.text())
-      .then(msg => {
-        document.getElementById("result").textContent = "✅ บันทึกสำเร็จ";
-      })
-      .catch(err => {
-        document.getElementById("result").textContent = "❌ เกิดข้อผิดพลาด";
-      });
-    });
-  </script>
 </body>
 </html>
