--- a/players.html
+++ b/players.html
@@ -61,16 +61,16 @@
     <datalist id="playerList"></datalist>
 
     <div class="info">
-      <p><strong>🎖 Squad:</strong></p><ul id="playerSquad"></span></ul>
+      <p><strong>🎖 Squad:</strong></p><ul id="playerSquad"></ul>
       <p><strong>📘 Beginner_Quests:</strong></p><ul id="playerBeginner"></ul>
       <p><strong>🛠 Labor_Quests:</strong></p><ul id="playerLabor"></ul>
-      <p><strong>💬 Discord:</strong></p><ul id="playerDiscord"></span></ul>
-      <p><strong>💬 Steam ID:</strong></p><ul id="playerSteamID"></span></ul>
+      <p><strong>💬 Discord:</strong></p><ul id="playerDiscord"></ul>
+      <p><strong>💬 Steam ID:</strong></p><ul id="playerSteamID"></ul>
     </div>
   </div>
 
   <script>
-    const BASE_URL = "https://script.google.com/macros/s/AKfycbwmH7ViTbZrZVfAyN2mhbcV4HbAAq3NiqMZMYA6a9raIOwmTrMmkkjUAXvXiK6KRjiJ2A/exec";
+    const BASE_URL = "https://script.google.com/macros/s/AKfycbwaWbpm34VomTnOzKzJba0cDfBvQV0DQYv7kZgDnpFEUKhoxxDuoVDv9Aw-6j5tpOPejA/exec";
     let playerData = [];
 
     fetch(BASE_URL + "?type=players")
